--- a/Home.html
+++ b/Home.html
@@ -48,7 +48,7 @@
 <br>
 
 <div class="footer">
-    URL Goes Here
+    <a href="https://github.com/cate13/Creative_Project_One">Git Hub Link</a>
 </div>
 </body>
 </html>
