--- a/Dogs.html
+++ b/Dogs.html
@@ -92,7 +92,7 @@
 <br>
 <br>
 <div class="footer">
-    URL Goes Here
+    <a href="https://github.com/cate13/Creative_Project_One">Git Hub Link</a>
 </div>
 </body>
 </html>
